tests/baselines/reference/exportAlreadySeen.errors.txt
==== tests/cases/compiler/exportAlreadySeen.ts (10 errors) ====
    module M {
        export export var x = 1;
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        export export function f() { }
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
    
        export export module N {
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export class C { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export interface I { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        }  
    }
    
    declare module A {
        export export var x;
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        export export function f()
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
    
        export export module N {
               ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export class C { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
            export export interface I { }
                   ~~~~~~
!!! error TS1030: 'export' modifier already seen.
        }
    }